# rust-template

./: CRSTemplate.json  CRSTemplate.toml  README.md  crs.json
docs/: book.toml
template/: .gitignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  HISTORY.md  LICENSE  README.md
template/src/: main.rs
