[package]
name = "{{~#if d.package_name}}
      {{~d.package_name}}
    {{~^~}}
      d.project_name
    {{~/if~}}"
version = "{{d.version}}"
edition = "{{d.rust_version}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
