[package]
name = "{{d.project_slug}}"
version = "{{~#if d.version}}
      {{~d.version}}
    {{~^~}}
      0.1.0
    {{~/if~}}"
edition = "{{~#if d.rust_version}}
      {{~d.rust_version}}
    {{~^~}}
    2021    
{{~/if~}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
